--- a/.gitignore
+++ b/.gitignore
@@ -2,13 +2,37 @@
 __pycache__/
 *.pyc
 
+
 # Node
 node_modules/
-npm-debug.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
 
-# Excel
-~$*.xlsx
+# Vite / Webapp Build
+dist/
+dist-ssr/
+*.local
+
+# Logs
+logs
+*.log
+
+# Editor directories
+.vscode/*
+!.vscode/extensions.json
+.idea
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
 
 # OS
 .DS_Store
 Thumbs.db
+
+# Excel
+~$*.xlsx 
